--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "paradiseofcode/mokapayment-laravel",
     "description": "Moka Payment Method of Laravel",
     "license": "MIT",
-    "version": "1.0.0",
+    "keywords": ["laravel","php","mokapayment"],
     "authors": [
         {
             "name": "Erhan NACAR",
